test/bad/sample46.dave
#Failed Case Testing
int main() {
	int[] x = [1,2,3];
	print(x[4]);

}

